# sandbox

./: .gitignore  README.md
architecture/: README.md  mindmap.md
docs/: README.md
java/tasklist/: pom.xml
kubernetes/: REAEME.md
microservices-demo-rust/: README.md
microservices-demo-rust/online_boutique/: Cargo.toml  build.rs
microservices-demo-rust/online_boutique/adservice/: Cargo.toml
microservices-demo-rust/online_boutique/cartservice/: Cargo.toml
microservices-demo-rust/online_boutique/checkoutservice/: Cargo.toml
microservices-demo-rust/online_boutique/currencyservice/: Cargo.toml
microservices-demo-rust/online_boutique/currencyservice/app/: Cargo.toml
microservices-demo-rust/online_boutique/currencyservice/domain/: Cargo.toml
microservices-demo-rust/online_boutique/currencyservice/domain/src/: type.rs
microservices-demo-rust/online_boutique/currencyservice/grpc/: Cargo.toml
microservices-demo-rust/online_boutique/currencyservice/grpc/src/: lib.rs
microservices-demo-rust/online_boutique/currencyservice/src/: main.rs
microservices-demo-rust/online_boutique/currencyservice/usecase/: Cargo.toml
microservices-demo-rust/online_boutique/currencyservice/usecase/src/: dto.rs  lib.rs
microservices-demo-rust/online_boutique/emailservice/: Cargo.toml
microservices-demo-rust/online_boutique/paymentservice/: Cargo.toml
microservices-demo-rust/online_boutique/productcatalogservice/: Cargo.toml  build.rs
microservices-demo-rust/online_boutique/productcatalogservice/app/src/: main.rs
microservices-demo-rust/online_boutique/productcatalogservice/domain/: Cargo.toml
microservices-demo-rust/online_boutique/productcatalogservice/domain/src/: lib.rs
microservices-demo-rust/online_boutique/productcatalogservice/grpc/: Cargo.toml
microservices-demo-rust/online_boutique/productcatalogservice/grpc/src/: client.rs  lib.rs  pb.rs  server.rs
microservices-demo-rust/online_boutique/productcatalogservice/src/: client.rs  server.rs
microservices-demo-rust/online_boutique/productcatalogservice/usecase/: Cargo.toml
microservices-demo-rust/online_boutique/productcatalogservice/usecase/src/: dto.rs  lib.rs
microservices-demo-rust/online_boutique/recommendationservice/: Cargo.toml
microservices-demo-rust/online_boutique/shippingservice/: Cargo.toml
next/myapp/: package-lock.json  package.json
next/myapp/src/app/: page.tsx
next/myapp/src/pages/: about.tsx
programming/: README.md
python/: README.md
python/csv/: skill_list_item.csv  skill_list_knowledge.csv  skill_map.json  viz.py
python/fastapi/: README.md  main.py
python/json_data_generation/: data.json  main.py
react/: README.md
remix/my-remix-app/: package-lock.json
remix/my-remix-app2/: package-lock.json  package.json
rust/: README.md
rust/actix-sample/: Cargo.toml  README.md
rust/actix-sample/src/: main.rs
rust/asynchronous/: Cargo.toml
rust/asynchronous-io/: Cargo.toml
rust/asynchronous-io/src/: lib.rs  main.rs
rust/asynchronous/src/: lib.rs  main.rs
rust/axum-sample/: Cargo.toml  README.md
rust/axum-sample/src/: main.rs
rust/hello-world/src/: main.rs
rust/json_to_struct/: Cargo.toml
rust/json_to_struct/src/: main.rs
rust/parallelism/src/: main.rs
tmp/online_boutique/: workspaceによるプロジェクト構成.md
tmp/online_boutique/productcatalogservice1/: Cargo.toml  build.rs
tmp/online_boutique/productcatalogservice1/src/: dto.rs  grpc.rs  lib.rs  usecase.rs
tmp/online_boutique/productcatalogservice2/: Cargo.toml
tmp/online_boutique/productcatalogservice2/entry/: Cargo.toml
tmp/online_boutique/productcatalogservice2/entry/src/: client.rs
tmp/online_boutique/productcatalogservice2/grpc/: Cargo.toml
tmp/online_boutique/proto/: online_boutique.proto
wasm/: README.md
wasm/walk-the-dog/: Cargo.toml  package-lock.json
wasm/walk-the-dog-chapter2/: Cargo.toml
wasm/walk-the-dog-chapter2/src/: lib.rs
wasm/walk-the-dog-chapter2/static/: index.html
wasm/walk-the-dog/src/: lib.rs
(+5 files in other folders)
