[workspace]
members = [
    "adservice",
    "cartservice",
    "checkoutservice",
    "currencyservice",
    "emailservice",
    "frontend",
    "paymentservice",
    "productcatalogservice/domain",
    "productcatalogservice/usecase",
    "productcatalogservice/grpc",
    "recommendationservice",
    "shippingservice",
]
resolver = "2"
