[package]
name = "productcatalogservice"
version = "0.1.0"
edition = "2021"
default-run = "productcatalogservice"
build="../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "productcatalogservice"
path = "src/bin/server.rs"

[[bin]]
name = "productcatalogservice-client"
path = "src/bin/client.rs"

[dependencies]
tonic = "0.10.0"
prost = "0.12.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = {version="0.10.0", features = ["prost"] }
