[package]
name = "productcatalogservice"
version = "0.1.0"
edition = "2021"
default-run = "server"
build="build.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.10.0"
prost = "0.12.0"

[build-dependencies]
tonic-build = {version="0.10.0", features = ["prost"] }