[package]
name = "grpc"
version = "0.1.0"
edition = "2021"
build="../../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grpc-client"
path = "src/client.rs"

[dependencies]
tonic = "0.10.0"
prost = "0.12.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
usecase = {path="../usecase"}

[build-dependencies]
tonic-build = {version="0.10.0", features = ["prost"] }
