[package]
name = "grpc"
version = "0.1.0"
edition = "2021"
build="../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.0"
prost = "0.12.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
usecase = {path="../usecase"}

[build-dependencies]
tonic-build = {version="0.10.0", features = ["prost"] }
